trouble with smallLogoExpo - it is displaying as if block and I am not sure why. If I move it to the expositionSection it cannot have the proper z-index to get on top where I want it. If I have it under blender as is now it displays as block and the blender gets displaced. I think I made need to move the blender to the artwork via photoshop to solve the problem of it getting moved about. to do this first put the smallLogoExpo back in expositionSection, make it disappear, screen shot the transistion with blender in place, bring it to photoshop and add it to the graphic. Then work on solving the smallLogo problems.

--- a/css/index/exposition.css
+++ b/css/index/exposition.css
@@ -20,7 +20,7 @@
   }
 
   #logoSmallExpo {
-    z-index: 10;
+
     position: -webkit-sticky; /*Safari*/
     position: sticky;
     padding: 1rem;
@@ -31,7 +31,8 @@
     background-color: rgba(255, 255, 255, 65%);
     backdrop-filter: blur(30px);
 
-    border: 2px pink dashed;
+    z-index: 3;
+    /* border: 2px pink dashed; */
   }
 
  #anythingGoes {
@@ -51,7 +52,6 @@
     justify-content: center;
     width: 100%;
     height: 750px;
-
  }
 
  /* <<< FOOTER START >>>> */
