--- a/css/index/home.css
+++ b/css/index/home.css
@@ -44,7 +44,7 @@
     justify-content: space-around;
     margin: 1.5rem auto 0 auto;
     position: absolute;
-    bottom: -5.5rem;
+    bottom: -4rem;
     width: 100%;
     height: 50px;
     z-index: 2;
@@ -52,5 +52,5 @@
 
 
     backdrop-filter: blur(5px);
-    /* border: 2px blue dotted; */
+    border: 2px blue dotted;
   }
